# Airflow_sneakers

./: .env.example  .gitignore  Makefile  README.md  docker-compose.s3.yaml  docker-compose.yml  farfetch_parsing.ipynb  pyproject.toml
.dvc/: config
.github/workflows/: parser.yml
Configs/postgres/: init.sql
Dockerfiles/parser/: Dockerfile
app/: __init__.py  __main__.py
app/api/v1/: eda_api.py
app/models/: sneakers.py
app/serializers/: base.py
app/services/: celery.py
app/settings/: logger.py  settings.py
app/tasks/: parser.py
dags/services/postgres/: connection.py
dags/services/s3/: connection.py
dags/test/: test_minio.py  test_produce_data_to_pg.py
data/test_dataset/: .gitignore  test_parsed.xml.dvc
dockerfiles/airflow/: requirements.txt
research/test_parser/: dock.md  farfetch_parsing.ipynb
