[tool.poetry]
name = "yandexairflowtemplate"
version = "0.1.0"
description = ""
authors = ["Dmitry <kachkindmitry@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
mypy = "^0.950"
black = "^22.3.0"
flake8 = "^4.0.1"
isort = "^5.10.1"
apache-airflow = "^2.7.2"
scikit-learn = "^1.3.1"
mlflow = "^2.7.1"
apache-airflow-providers-postgres = "^5.7.0"
apache-airflow-providers-amazon = "^8.8.0"
pylint = "^3.2.2"
backoff = "^2.2.1"

[tool.black]
line-length = 79
exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.pytest_cache
  | \.tox
  | venv
  | build
  | dist
)/
'''


[tool.isort]
profile = "black"
multi_line_output = 3


[tool.mypy]
warn_redundant_casts = true
warn_unused_ignores = false
warn_no_return = true
warn_unreachable = true
pretty = true

[[tool.mypy.overrides]]
module = "*.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = true

[tool.pylint.main]
fail-under = 10
ignore = ["data"]
ignored-modules = ["test"]
py-version = "3.10"
suggestion-mode = true

[tool.pylint.basic]
bad-names = ["foo", "bar", "baz", "toto", "tutu", "tata"]
class-attribute-naming-style = "any"
class-const-naming-style = "UPPER_CASE"
class-naming-style = "PascalCase"
const-naming-style = "UPPER_CASE"
function-naming-style = "snake_case"
property-classes = ["abc.abstractproperty"]


[tool.pylint.format]
ignore-long-lines = "^\\s*(# )?<?https?://\\S+>?$"
indent-after-paren = 4
indent-string = "    "
max-line-length = 79
max-module-lines = 1000


[tool.pylint.messages_control]
disable = [
    "missing-docstring",
    "too-few-public-methods",
    "too-many-arguments",
    "invalid-all-format",
    "import-error",
    "logging-fstring-interpolation",
    "redefined-builtin",
    "R0801",
    "pointless-statement"
]


good-names = []

[tool.pylint.similarities]
ignore-imports = true
ignore-docstrings = true
ignore-comments = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
